fixed problem of text overflow on header of conflict page. Next: add bubble popup for text that overflows.

--- a/nomnom/public/stylesheets/conflict.css
+++ b/nomnom/public/stylesheets/conflict.css
@@ -38,10 +38,14 @@ strong {
 	}
 
 	.ingredients h2 {
-		text-align: center;
-		font-size: 20px;	
+		text-align: left;
+		font-size: 14px;	
 		float: left;
 		margin: 0;
+		width: 50%;
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
 	}
 	
 	.ingredient{
